[refactor] Simplify instance checks with pattern matching
- Replaced traditional instanceof checks with pattern matching in several classes, including Backup, ExtArrayNodeSet, NewArrayNodeSet, and RemoteCollection, improving code readability and conciseness.
- Updated BinaryValue to ensure proper stream closure and resource management.
- Refactored ArrayType and FunHigherOrderFun for cleaner syntax and better handling of sequences.
- Enhanced error handling in various classes by utilizing try-with-resources for automatic resource management.